fix overlap and sidebar overlayed focus issue

--- a/client/src/app.less
+++ b/client/src/app.less
@@ -386,12 +386,12 @@ body #grid * {
       &.mouseovered:before {
         display: block;
         position: absolute;
-        left: -315px;
+        left: -260px;
         top: 0;
 
         height: max-content;
-        min-width: 300px;
-        width: 300px;
+        min-width: 250px;
+        width: 250px;
 
         padding: 4px;
 
@@ -1784,7 +1784,7 @@ body #grid * {
 }
 
 #canvas.page-handler, #canvas.page-function {
-  z-index: 56;
+  left: 320px;
 }
 
 .entry {
